--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,6 @@ config.log
 
 # Built by sconsUtils
 version.py
-bin/
 
 # Pytest
 tests/.tests
@@ -19,3 +18,7 @@ pytest_session.txt
 .cache/
 .pytest_cache
 .coverage
+ospl-error.log
+ospl-info.log
+
+.idea/
