--- a/schema/ess.yaml
+++ b/schema/ess.yaml
@@ -5,28 +5,21 @@ title: ESS v1
 description: Schema for ESS configuration files
 type: object
 properties:
-  host:
-    description: IP address of the TCP/IP interface
+  uart:
+    description: Logical device to connect to
     type: string
-    format: hostname
-    default: "127.0.0.1"
-  port:
-    description: Port number of the TCP/IP interface
+    default: "/dev/ttyUSB0"
+  baudrate:
+    description: Baudrate of the serial connection
     type: integer
-    default: 5000
+    default: 19200
   connection_timeout:
-    description: Time limit for connecting to the TCP/IP interface (sec)
+    description: Time limit for connecting to the logical device (sec)
     type: number
     exclusiveMinimum: 0
-    default: 10
-  read_timeout:
-    description: Time limit for reading data from the TCP/IP interface (sec)
-    type: number
-    exclusiveMinimum: 0
-    default: 10
+    default: 1.5
 required:
-  - host
-  - port
+  - uart
+  - baudrate
   - connection_timeout
-  - read_timeout
 additionalProperties: false
