--- a/setup.cfg
+++ b/setup.cfg
@@ -7,13 +7,10 @@ exclude =
   doc,
   **/*/__init__.py,
   **/*/version.py,
-  python/lsst/ts/ess/ESS_*.py,
-  python/lsst/ts/ess/ess_marshaller.py,
-  python/lsst/ts/ess/serialhat.py,
   tests/.tests
 
 [tool:pytest]
-addopts = --flake8
+addopts = --flake8 --black --ignore-glob="**/test_*_instr.py"
 flake8-ignore = E133 E226 E228 N802 N803 N806 N812 N813 N815 N816 W503 E203
 
 [metadata]
