--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -7,6 +7,7 @@ source:
   path: ../
 
 build:
+  noarch: generic
   script: python -m pip install --no-deps --ignore-installed .
   script_env:
     - PATH
@@ -23,9 +24,6 @@ test:
     - ts-conda-build
     - ts-idl {{ idl_version }}
     - ts-salobj {{ salobj_version }}
-    - pyserial
-    - pyftdi
-    - ts-simactuators
     - ts-dds
     - black == 19.10b0
   source_files:
