--- a/setup.cfg
+++ b/setup.cfg
@@ -1,16 +1,17 @@
+[aliases]
+test=pytest
+
 [flake8]
 max-line-length = 110
 max-doc-length = 79
 ignore = E133, E226, E228, N802, N803, N806, N812, N813, N815, N816, W503, E203, F401, F403, F405
 exclude =
-  bin,
   doc,
-  **/*/__init__.py,
-  **/*/version.py,
+  __init__.py,
   tests/.tests
 
 [tool:pytest]
-addopts = --flake8 --black --ignore-glob="**/test_*_instr.py"
+addopts = --flake8 --black
 flake8-ignore = E133 E226 E228 N802 N803 N806 N812 N813 N815 N816 W503 E203 F401 F403 F405
 
 [metadata]
