DM-29020: Fixed an error regarding removing required packages.

--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -25,6 +25,8 @@ test:
     - ts-idl {{ idl_version }}
     - ts-salobj {{ salobj_version }}
     - ts-dds
+    - pyserial
+    - pyftdi
     - black == 19.10b0
   source_files:
     - python
