--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -21,13 +21,13 @@ build:
 
 test:
   requires:
-    - ts-conda-build
+    - ts-conda-build =0.3
     - ts-idl {{ idl_version }}
     - ts-salobj {{ salobj_version }}
     - ts-dds
     - pyserial
     - pyftdi
-    - black == 19.10b0
+    - black
   source_files:
     - python
     - bin
