--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -1,4 +1,5 @@
 {% set data= load_setup_py_data() %}
+
 package:
   name: "ts-ess"
   version: {{ data.get('version') }}
@@ -23,8 +24,8 @@ test:
     - ts-conda-build =0.3
     - ts-idl {{ idl_version }}
     - ts-salobj {{ salobj_version }}
-    - ts_tcpip
-    - ts_envsensors
+    - ts-tcpip
+    - ts-envsensors
     - ts-dds
     - pyserial
     - pyftdi
@@ -46,7 +47,7 @@ requirements:
     - python
     - setuptools
     - setuptools_scm
-    - ts-idl {{ idl_version }}
-    - ts-salobj {{ salobj_version }}
-    - ts_tcpip
-    - ts_envsensors
+    - ts-idl
+    - ts-salobj
+    - ts-tcpip
+    - ts-envsensors
