DM-30072: Removed all sensor code and switched the CSC permanently to 'remote' mode.

--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -8,6 +8,7 @@ source:
   path: ../
 
 build:
+  noarch: generic
   script: python -m pip install --no-deps --ignore-installed .
   script_env:
     - PATH
