--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,7 @@ test=pytest
 [flake8]
 max-line-length = 110
 max-doc-length = 79
-ignore = E133, E226, E228, N802, N803, N806, N812, N813, N815, N816, W503, E203, F401, F403, F405
+ignore = E133, E226, E228, N802, N803, N806, N812, N813, N815, N816, W503, E203
 exclude =
   doc,
   __init__.py,
@@ -12,7 +12,7 @@ exclude =
 
 [tool:pytest]
 addopts = --flake8 --black
-flake8-ignore = E133 E226 E228 N802 N803 N806 N812 N813 N815 N816 W503 E203 F401 F403 F405
+flake8-ignore = E133 E226 E228 N802 N803 N806 N812 N813 N815 N816 W503 E203
 
 [metadata]
 version = attr: setuptools_scm.get_version
