Enable mypy type checking

--- a/setup.cfg
+++ b/setup.cfg
@@ -10,8 +10,17 @@ exclude =
   __init__.py,
   tests/.tests
 
+[mypy]
+ignore_missing_imports = True
+disallow_untyped_defs = True
+# This exclusion (which can only have one value, a regex) applies when running mypy
+# from the command line (e.g. `mypy .`), but not when running it via pytest.
+# Add matching ignores to addopts in [tool:pytest].
+# Exclude version.py because the scons-generated version fails mypy.
+exclude = version\.py
+
 [tool:pytest]
-addopts = --flake8 --black
+addopts = --flake8 --black --mypy --ignore-glob=*/version.py
 flake8-ignore = E133 E226 E228 N802 N803 N806 N812 N813 N815 N816 W503 E203
 
 [metadata]
