--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -1,7 +1,7 @@
 {% set data= load_setup_py_data() %}
 
 package:
-  name: "ts-ess"
+  name: "ts-ess-csc"
   version: {{ data.get('version') }}
 
 source:
