--- a/tests/data/config/_init.yaml
+++ b/tests/data/config/_init.yaml
@@ -10,4 +10,5 @@ instances:
               device_type: FTDI
               ftdi_id: ABC
               sensor_type: Temperature
+              baud_rate: 19200
               location: Test1
