--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,7 +9,6 @@ repos:
     rev: 22.6.0
     hooks:
       - id: black
-        args: [--config=pyproject.toml]
 
   - repo: https://github.com/pycqa/flake8
     rev: 4.0.1
@@ -24,8 +23,8 @@ repos:
         args: [--settings-path=pyproject.toml]
 
   - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: "v0.971"
+    rev: v0.991
     hooks:
       - id: mypy
-        additional_dependencies: [types-PyYAML==6.0.11]
+        additional_dependencies: [types-PyYAML==6.0.12.2]
         args: [--config-file=pyproject.toml]
