--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ version = { attr = "setuptools_scm.get_version" }
 where = [ "python" ]
 
 [project.scripts]
-run_ess_csc = "lsst.ts.ess.csc.cli:execute_csc"
+run_ess_csc = "lsst.ts.ess.csc.ess_csc:run_ess_csc"
 
 [tool.setuptools_scm]
 write_to = "python/lsst/ts/ess/csc/version.py"
