Remove root workaround from Jenkinsfile.

--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -23,6 +23,7 @@ test:
     - ts-idl {{ idl_version }}
     - ts-salobj {{ salobj_version }}
     - ts-tcpip
+    - ts-utils
     - ts-ess-common
     - ts-dds
     - pyserial
