--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -7,20 +7,14 @@ source:
   path: ../
 
 build:
-  noarch: generic
+  noarch: python
   script: {{ PYTHON }} -m pip install --no-deps --ignore-installed .
 
 test:
   requires:
     - ts-conda-build =0.4
-    - ts-idl {{ idl_version }}
+    - ts-xml {{ xml_version }}
     - ts-salobj {{ salobj_version }}
-    - ts-tcpip
-    - ts-utils
-    - ts-ess-common
-    - ts-dds
-    - pyserial
-    - pyftdi
   source_files:
     - python
     - bin
@@ -39,6 +33,7 @@ requirements:
     - python {{ python }}
     - setuptools_scm
     - setuptools
+    - ts-conda-build =0.4
   run:
     - python {{ python }}
     - setuptools
